[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/Button.gd" type="Script" id=1]
[ext_resource path="res://images/floor-button.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 2 )

[node name="Button" type="Node2D" groups=[
"Button",
"Job",
]]
z_index = -1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( 9, -6 )
shape = SubResource( 1 )

[node name="Top" type="Area2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Top"]
position = Vector2( 0, -13 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Right"]
position = Vector2( -9, -6 )
shape = SubResource( 1 )

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 0, 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bottom"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_Left_body_exited"]
[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="body_exited" from="Top" to="." method="_on_Top_body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_Right_body_exited"]
[connection signal="body_entered" from="Bottom" to="." method="_on_Bottom_body_entered"]
[connection signal="body_exited" from="Bottom" to="." method="_on_Bottom_body_exited"]
